compatibility-tests/compile-fail/tests/ui/module-visibility.stderr
error[E0603]: module `error` is private
  --> $DIR/module-visibility.rs:16:21
   |
16 |     let _ = inside::error::VariantSnafu;
   |                     ^^^^^ private module
   |
note: the module `error` is defined here
  --> $DIR/module-visibility.rs:4:21
   |
4  |     #[derive(Debug, Snafu)]
   |                     ^^^^^
   = note: this error originates in the derive macro `Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)
